--- a/index.html
+++ b/index.html
@@ -3,25 +3,31 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="web for UCLA C3S">
+    <meta name="description" content="Website for UCLA C3S">
     <meta name="author" content="Shi Gao">
     <title>UCLA-C3S</title>
 
     <!-- css -->
-    <link rel='stylesheet' href='fullcalendar/fullcalendar.css' />
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-    <link href="css/nivo-lightbox.css" rel="stylesheet" type="text/css" />
-    <link href="css/nivo-lightbox-theme/default/default.css" rel="stylesheet" type="text/css" />
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/nivo-lightbox-theme/default/default.css" rel="stylesheet" />
     <link href="css/owl.carousel.css" rel="stylesheet" media="screen" />
     <link href="css/owl.theme.css" rel="stylesheet" media="screen" />
-    <link href="css/flexslider.css" rel="stylesheet" type="text/css" />
-    <link href="css/animate.css" rel="stylesheet" type="text/css" />
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
-    <link href="color/default.css" rel="stylesheet" type="text/css" />
-    <link href="css/custom.css" rel="stylesheet" type="text/css" />
+    
+    <!--link href="fullcalendar/fullcalendar.css" rel="stylesheet" /-->
+    <!--link href="css/animate.css" rel="stylesheet" /-->
+    <link href="css/flexslider.css" rel="stylesheet" />
+    <link href="color/default.css" rel="stylesheet" />
+    <link href="css/nivo-lightbox.css" rel="stylesheet" />
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" /-->
+
+    <link href="css/style.css" rel="stylesheet" />
+    
+    <link href="css/custom.css" rel="stylesheet" />
+
     <link rel="shortcut icon" href="/c3s/img/logo.jpg" />
     <link rel="icon" type="image/png" href="img/logo.jpg">
+
+    <!-- js -->
     <script src="js/jquery.min.js"></script>
     <script src='js/moment.min.js'></script>
     <!--script src="js/jsrender.min.js"></script-->
@@ -96,20 +102,20 @@
 
     <div id="container page" class="container page">
         <!-- Section: intro -->
-        <section id="intro" class="home-slide text-light">
-            <!-- Carousel -->
+        <!--<section id="intro" class="home-slide text-light">
+            &lt;!&ndash; Carousel &ndash;&gt;
             <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                <!-- Indicators -->
+                &lt;!&ndash; Indicators &ndash;&gt;
                 <ol class="carousel-indicators">
                     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                     <li data-target="#carousel-example-generic" data-slide-to="2"></li>
                 </ol>
-                <!-- Wrapper for slides -->
+                &lt;!&ndash; Wrapper for slides &ndash;&gt;
                 <div class="carousel-inner">
                     <div class="item active">
                         <img src="img/1.jpg" alt="First slide" />
-                        <!-- Static Header -->
+                        &lt;!&ndash; Static Header &ndash;&gt;
                         <div class="header-text hidden-xs">
                             <div class="col-md-12 text-center">
                                 <div class="container margintop-50">
@@ -121,11 +127,11 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- /header-text -->
+                        &lt;!&ndash; /header-text &ndash;&gt;
                     </div>
                     <div class="item">
                         <img src="img/3.jpg" alt="Third slide">
-                        <!-- Static Header -->
+                        &lt;!&ndash; Static Header &ndash;&gt;
                         <div class="header-text hidden-xs">
                             <div class="col-md-12 text-center">
                                 <div class="container margintop-50">
@@ -139,11 +145,11 @@
                                     <a class="btn btn-theme btn-sm btn-min-block" href="#schedule">Online Schedule</a><a class="btn btn-theme btn-sm btn-min-block" href="#photos">Photo Gallery</a>
                                 </div>
                             </div>
-                        </div><!-- /header-text -->
+                        </div>&lt;!&ndash; /header-text &ndash;&gt;
                     </div>
                     <div class="item">
                         <img src="img/2.jpg" alt="Second slide">
-                        <!-- Static Header -->
+                        &lt;!&ndash; Static Header &ndash;&gt;
                         <div class="header-text hidden-xs">
                             <div class="col-md-12 text-center">
                                 <div class="container margintop-50">
@@ -157,18 +163,18 @@
                                     <a class="btn btn-theme btn-sm btn-min-block" href="#service">Follow us</a><a class="btn btn-theme btn-sm btn-min-block" href="#service">Email List</a>
                                 </div>
                             </div>
-                        </div><!-- /header-text -->
+                        </div>&lt;!&ndash; /header-text &ndash;&gt;
                     </div>
                 </div>
-                <!-- Controls -->
+                &lt;!&ndash; Controls &ndash;&gt;
                 <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
                     <span class="glyphicon glyphicon-chevron-left"></span>
                 </a>
                 <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
                     <span class="glyphicon glyphicon-chevron-right"></span>
                 </a>
-            </div><!-- /carousel -->
-        </section>
+            </div>&lt;!&ndash; /carousel &ndash;&gt;
+        </section>-->
         <!-- /Section: intro -->
 
         <!-- Section: about -->
@@ -178,7 +184,7 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="wow flipInY" data-wow-offset="0" data-wow-delay="0.4s">
                             <div class="section-heading text-center">
-                                <h2 class="h-bold">About US </h2>
+                                <h2 class="h-bold">UCLA-C3S</h2>
                                 <div class="divider-header"></div>
                                 <p><strong id="docs-internal-guid-7540891d-fac0-2c6f-1586-6b47b55ce7f4">UCLA Chinese-American Students and Scholars Seminar</strong></p>
                             </div>
@@ -879,7 +885,7 @@
                             <div class="col-md-6 col-sm-6">
                                 <div style="margin: 10px 5px 5px 5px; display: block">
                                     <a href="events/sztech.pdf">
-                                        <img src="img/sztech.jpg" height="120px" style="display: block; margin-left: auto; margin-right: auto;">
+                                        <img src="img/sztech.jpg" height="100%" style="display: block; margin-left: auto; margin-right: auto;">
                                     </a>
                                 </div>
                             </div>
