--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@
                             <div class="col-md-6 col-sm-6">
                                 <div style="margin: 10px 5px 5px 5px; display: block">
                                     <a href="events/sztech.pdf">
-                                        <img src="img/sztech.jpg" height="100%" style="display: block; margin-left: auto; margin-right: auto;">
+                                        <img src="img/sztech.jpg" width="100%" style="display: block; margin-left: auto; margin-right: auto;">
                                     </a>
                                 </div>
                             </div>
