add fb/wechat links

--- a/index.html
+++ b/index.html
@@ -915,6 +915,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-xs-6 col-sm-3 col-md-3">
+                        </div>
+                        <div class="col-xs-6 col-sm-3 col-md-3">
                             <div class="wow fadeInLeft" data-wow-delay="0.2s">
                                 <div class="service-box">
                                     <div style="text-align:center">
@@ -922,22 +924,7 @@
                                     </div>
                                     <div class="service-desc">
                                         <br>
-                                        <h5>Facebook</h5>
-                                        <a href="#" class="btn btn-skin">Learn more</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xs-6 col-sm-3 col-md-3">
-                            <div class="wow fadeInUp" data-wow-delay="0.2s">
-                                <div class="service-box">
-                                    <div style="text-align:center">
-                                        <img src="img/weibo.jpg" alt="" />
-                                    </div>
-                                    <div class="service-desc">
-                                        <br>
-                                        <h5>Weibo</h5>
-                                        <a href="#" class="btn btn-skin">Learn more</a>
+                                        <h5><a href="https://www.facebook.com/groups/1575168789435333" class="btn btn-skin">Facebook</a></h5>
                                     </div>
                                 </div>
                             </div>
@@ -950,13 +937,28 @@
                                     </div>
                                     <div class="service-desc">
                                         <br>
-                                        <h5>WeChat</h5>
-                                        <a href="#" class="btn btn-skin">Learn more</a>
+                                        <h5><a href="http://weixin.qq.com/r/ykhLTxHENtlKKVUsbx1O" class="btn btn-skin">WeChat</a></h5>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-xs-6 col-sm-3 col-md-3">
+                        </div>
+                        <!--div class="col-xs-6 col-sm-3 col-md-3">
+                            <div class="wow fadeInUp" data-wow-delay="0.2s">
+                                <div class="service-box">
+                                    <div style="text-align:center">
+                                        <img src="img/weibo.jpg" alt="" />
+                                    </div>
+                                    <div class="service-desc">
+                                        <br>
+                                        <h5>Weibo</h5>
+                                        <a href="#" class="btn btn-skin">Learn more</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div-->
+                        <!--div class="col-xs-6 col-sm-3 col-md-3">
                             <div class="wow fadeInRight" data-wow-delay="0.2s">
                                 <div class="service-box">
                                     <div style="text-align:center">
@@ -969,7 +971,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div-->
                     </div>
                 </div>
             </div>
@@ -977,7 +979,7 @@
         <!-- /Section: follow us -->
 
         <!-- Section: contact -->
-        <section id="contact" class="home-section nopadd-bot color-dark bg-gray text-center">
+        <!--<section id="contact" class="home-section nopadd-bot color-dark bg-gray text-center">
             <div class="container marginbot-50">
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
@@ -1019,7 +1021,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section>-->
         <!-- /Section: contact -->
 
         <!-- footer -->
