seperate out organizers and members

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
     <link href="css/custom.css" rel="stylesheet" />
 
-    <link rel="shortcut icon" href="/c3s/img/logo.jpg" />
+    <!--link rel="shortcut icon" href="/c3s/img/logo.jpg" /-->
     <link rel="icon" type="image/png" href="img/logo.jpg">
 
     <!-- js -->
@@ -87,9 +87,9 @@
                                 <li><a class="seminar_nav" href="#seminars">Seminars</a></li>
                                 <li><a href="#story">Story</a></li>
                                 <li><a href="#westwood">Westwood Cafe</a></li>
-                                <li><a href="advisors.html">Advisors</a></li>
-                                <li><a href="">Orgnizers</a></li>
-                                <li><a href="">Gallery</a></li>
+                                <li><a href="advisers.html">Advisers</a></li>
+                                <li><a href="organizers.html">Organizers</a></li>
+                                <li><a href="gallery.html">Gallery</a></li>
                                 <li><a href="#career">Careers</a></li>
                             </ul>
                         </div>
@@ -452,7 +452,7 @@
                         </div>
                         <div class="col-xs-6 col-sm-3 col-md-3">
                             <div class="wow fadeInLeft" data-wow-delay="0.2s">
-                                <div class="service-box">
+                                <div>
                                     <div style="text-align:center">
                                         <img src="img/fb.png" alt="" />
                                     </div>
@@ -465,7 +465,7 @@
                         </div>
                         <div class="col-xs-6 col-sm-3 col-md-3">
                             <div class="wow fadeInUp" data-wow-delay="0.2s">
-                                <div class="service-box">
+                                <div>
                                     <div style="text-align:center">
                                         <img src="img/wechat.png" alt="" />
                                     </div>
