--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         </div>
                         <div class="collapse navbar-collapse" id="menu">
                             <ul class="nav navbar-nav navbar-right">
-                                <li class="active"><a href="#intro">Home</a></li>
+                                <li class="active"><a href="#page-top">Home</a></li>
                                 <li><a href="#about">About Us</a></li>
                                 <li><a href="#events">Events</a></li>
                                 <li><a class="seminar_nav" href="#seminars">Seminars</a></li>
