1. fix nav bar display for various devices, set max-width to 767 is very important 2. restructure career files

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="css/flexslider.css" rel="stylesheet" />
     <link href="color/default.css" rel="stylesheet" />
     <link href="css/nivo-lightbox.css" rel="stylesheet" />
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" /-->
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" />
 
     <link href="css/style.css" rel="stylesheet" />
     
@@ -82,15 +82,15 @@
                         <div class="collapse navbar-collapse" id="menu">
                             <ul class="nav navbar-nav navbar-right">
                                 <li class="active"><a href="#page-top">Home</a></li>
-                                <li><a href="#about">About Us</a></li>
+                                <!--li><a href="#about">About Us</a></li-->
                                 <li><a href="#events">Events</a></li>
                                 <li><a class="seminar_nav" href="#seminars">Seminars</a></li>
                                 <li><a href="#story">Story</a></li>
                                 <li><a href="#westwood">Westwood Cafe</a></li>
-                                <li><a href="advisers.html">Advisers</a></li>
-                                <li><a href="organizers.html">Organizers</a></li>
-                                <li><a href="gallery.html">Gallery</a></li>
                                 <li><a href="#career">Careers</a></li>
+                                <li><a href="gallery.html">Gallery</a></li>
+                                <li><a href="advisers.html">Advisers</a></li>
+                                <li><a class="optional" href="organizers.html">Organizers</a></li>
                             </ul>
                         </div>
                     </div>
@@ -375,7 +375,7 @@
         <!-- /Section: westwood -->
 
         <!-- /Section: career -->
-        <section id="career" class="home-section color-dark bg-gray">
+        <section id="career" class="home-section color-dark bg-white">
             <div class="container marginbot-50">
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
@@ -391,32 +391,32 @@
             <div class="text-center">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-11 col-sm-11">
+                        <div class="col-md-12 col-sm-12">
                             <div class="col-md-6 col-sm-6">
                                 <div style="margin: 10px 5px 5px 5px; display: block">
-                                    <a href="events/zju.pdf">
-                                        <img src="img/zju.png" width="100%" style="display: block; margin-left: auto; margin-right: auto;">
+                                    <a href="careers/zju.pdf">
+                                        <img src="careers/img/zju.png" width="100%" style="display: block; margin-left: auto; margin-right: auto;">
                                     </a>
                                 </div>
                             </div>
                             <div class="col-md-6 col-sm-6">
                                 <div style="margin: 10px 5px 5px 5px; display: block">
-                                    <a href="events/nankai.pdf">
-                                        <img src="img/nankai.jpg" width="100%" style="display: block; margin-left: auto; margin-right: auto;">
+                                    <a href="careers/nankai.pdf">
+                                        <img src="careers/img/nankai.jpg" width="100%" style="display: block; margin-left: auto; margin-right: auto;">
                                     </a>
                                 </div>
                             </div>
                             <div class="col-md-6 col-sm-6">
                                 <div style="margin: 10px 5px 5px 5px; display: block">
-                                    <a href="events/donghua.pdf">
-                                        <img src="img/donghua.jpg" width="100%" style="display: block; margin-left: auto; margin-right: auto;">
+                                    <a href="careers/donghua.pdf">
+                                        <img src="careers/img/donghua.jpg" width="100%" style="display: block; margin-left: auto; margin-right: auto;">
                                     </a>
                                 </div>
                             </div>
                             <div class="col-md-6 col-sm-6">
                                 <div style="margin: 10px 5px 5px 5px; display: block">
-                                    <a href="events/sztech.pdf">
-                                        <img src="img/sztech.jpg" width="100%" style="display: block; margin-left: auto; margin-right: auto;">
+                                    <a href="careers/sztech.pdf">
+                                        <img src="careers/img/sztech.jpg" width="100%" style="display: block; margin-left: auto; margin-right: auto;">
                                     </a>
                                 </div>
                             </div>
@@ -428,7 +428,7 @@
         <!-- /Section: career -->
 
         <!-- Section: follow us -->
-        <section id="service" class="home-section color-dark bg-gray">
+        <section id="service" class="home-section color-dark bg-white">
             <div class="container marginbot-50">
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
