hide optional texts

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                             <div class="section-heading text-center">
                                 <h2 class="h-bold">UCLA-C3S</h2>
                                 <div class="divider-header"></div>
-                                <p><strong id="docs-internal-guid-7540891d-fac0-2c6f-1586-6b47b55ce7f4">UCLA Chinese-American Students and Scholars Seminar</strong></p>
+                                <p class="optional"><strong>UCLA Chinese-American Students and Scholars Seminar</strong></p>
                             </div>
                         </div>
                     </div>
@@ -197,13 +197,13 @@
                     <div class="col-md-2">
                         <img src="img/logo.jpg" alt="" class="img-responsive" />
                     </div>
-                    <div class="col-md-10">
+                    <div class="col-md-10 optional">
                         <p>UCLA-C3S is a non-profit, professional platform for academic-related research and career networking at UCLA . Managed by a group of non-paid, dedicated UCLA Ph.D student volunteers, it originates from Chinese Biomedical Peer Seminar (CBPS), established to enable Chinese graduate students at UCLA to share their research experiences and promote scientific discussions. <!--Since CBPS’s foundation in 2011, it has been running successfully for more than 3 years and had benefited many students and scholars.--> The new UCLA-C3S program aims to provide academic-related education, collaboration and career opportunities to all Chinese-American students and scholars at UCLA and beyond.</p>
                     </div>
                 </div>
 
-                <p> UCLA-C3S seeks to benefit all Chinese-American students and scholars at UCLA from the following broad aspects:</p>
-                <ul style="list-style-type:disc">
+                <p class="optional"> UCLA-C3S seeks to benefit all Chinese-American students and scholars at UCLA from the following broad aspects:</p>
+                <ul class="optional" style="list-style-type:disc">
                     <li>Promote academic communication and collaboration among Chinese-American students and scholars across majors at UCLA campus.	</li>
                     <li>Strengthen academic communication and create collaboration between UCLA and other institutions, especially those from China. </li>
                     <li>Offer undergraduate and young graduate students close look at diverse and world-leading research work at UCLA, and encourage their engagements in scientific research. </li>
