--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                             <div class="section-heading text-center">
                                 <h2 class="h-bold">Seminars</h2>
                                 <div class="divider-header"></div>
-                                <p><strong>Check out next week's seminars in UCLA here!</strong></p>
+                                <p class="optional"><strong>Check out next week's seminars in UCLA here!</strong></p>
                             </div>
                         </div>
                     </div>
@@ -333,7 +333,7 @@
                             <div class="section-heading text-center">
                                 <h2 class="h-bold">Story</h2>
                                 <div class="divider-header"></div>
-                                <p><strong>UCLA alumni to share their stories over the years studying at UCLA.</strong></p>
+                                <p class="optional"><strong>UCLA alumni to share their stories over the years studying at UCLA.</strong></p>
                             </div>
                         </div>
                     </div>
@@ -358,7 +358,7 @@
                             <div class="section-heading text-center">
                                 <h2 class="h-bold">Westwood Cafe</h2>
                                 <div class="divider-header"></div>
-                                <p><strong>Our brand new section!</strong></p>
+                                <p class="optional"><strong>Our brand new section!</strong></p>
                             </div>
                         </div>
                     </div>
@@ -381,7 +381,7 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
                             <div class="section-heading text-center">
-                                <h2 class="h-bold">Career Opportunity</h2>
+                                <h2 class="h-bold">Careers</h2>
                                 <div class="divider-header"></div>
                             </div>
                         </div>
