fix top section position

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <!-- /Section: intro -->
 
         <!-- Section: about -->
-        <section id="about" class="home-section color-dark bg-white">
+        <section id="about" class="top-section home-section color-dark bg-white">
             <div class="container marginbot-50">
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
