comment out calendar js for index page

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <script src="js/jquery.min.js"></script>
     <script src='js/moment.min.js'></script>
     <!--script src="js/jsrender.min.js"></script-->
-    <script src='fullcalendar/fullcalendar.js'></script>
-    <script src='calendar_data.js'></script>
+    <!--script src='fullcalendar/fullcalendar.js'></script-->
+    <!--script src='calendar_data.js'></script-->
     <!--script src='story_data.js'></script-->
 
     <script>
