--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 <ul class="optional" style="list-style-type:disc">
                     <li>Promote academic communication and collaboration among Chinese-American students and scholars across majors at UCLA campus.	</li>
                     <li>Strengthen academic communication and create collaboration between UCLA and other institutions, especially those from China. </li>
-                    <li>Offer undergraduate and young graduate students close look at diverse and world-leading research work at UCLA, and encourage their engagements in scientific research. </li>
+                    <li>Offer undergraduate and young graduate students close look at diverse and world-leading research work, and encourage their engagements in scientific research. </li>
                     <li>Facilitate sharing of academic-related career opportunities for UCLA Chinese-American students and scholars. </li>
                 </ul>
             </div>
