add seminars load anchor

--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
                     </div>
                 </div>
             </div>
+            <div id="seminars-load"></div>
         </section>
         <!-- /Section: events -->
 
