update liuting info

--- a/organizers.html
+++ b/organizers.html
@@ -157,8 +157,8 @@
                         </div>
                         <div class="col-md-9 col-xs-6">
                             <p><strong>Ting Liu</strong></p>
-                            Fifth Year PhD Candidate, Molecular, Cellular & Developmental Biology, UCLA <br />
-                            B.S.  Sichuan University <br />
+                            Ph.D. Molecular, Cellular & Developmental Biology, UCLA <br />
+                            B.S. Sichuan University <br />
                             Research Interests: Immune Response to Injury, Stem Cell Biology
                         </div>
                     </div>
